--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,7 +6,15 @@ find_package(Lua REQUIRED)
 include_directories(${OpenCV_INCLUDE_DIRS})
 include_directories(${LUA_INCLUDE_DIR})
 
+set(CMAKE_CXX_FLAGS_RELEASE "-O3")
+
 add_executable(luvdot 
+    src/color.cpp
+    src/conversion.cpp
+    src/il.cpp
+    src/img.cpp
     src/main.cpp
 )
 target_link_libraries(luvdot ${OpenCV_LIBS} ${LUA_LIBRARIES})
+
+set_property(TARGET luvdot PROPERTY CXX_STANDARD 20)
