--- a/.github/workflows/cmake-single-platform.yml
+++ b/.github/workflows/cmake-single-platform.yml
@@ -47,3 +47,9 @@ jobs:
       # See https://cmake.org/cmake/help/latest/manual/ctest.1.html for more detail
       run: ctest -C ${{env.BUILD_TYPE}}
 
+    - name: Upload binary as artifact
+      uses: actions/upload-artifact@v4
+      with:
+        name: luvdot-binary
+        path: build/luvdot
+
